test/bad/wrong-type-if.go
package main
import "fmt"

func main() {
  if (5) {
    fmt.Print("non")
  } else {
    fmt.Print("non plus")
  }
}
